--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.361.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
